--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,9 @@ website:
     left:
       - href: index.qmd
         text: Home
+      - work.qmd
       - courses.qmd
+      - blog.qmd
 
 format:
   html:
