--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,6 +32,7 @@ website:
       style: "docked"
       background: light
       contents:
+        - href: services.qmd
         - href: work.qmd
         - href: blog.qmd
         - href: research.qmd
