--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,26 +3,26 @@ project:
   output-dir: docs
 
 website:
-  title: "Davide Gentile"
+  #title: "Davide Gentile"
   page-footer: "&copy; 2024 Davide Gentile. Built with Quarto."
   navbar:
     left:
+      - text: "Home"
+        href: index.qmd
       - text: "About"
         href: about.qmd
-      #- text: "Home"
-        #href: index.qmd
-      - text: "Work"
+      - text: "Sites"
         menu: 
           - text: "Services"
             href: services.qmd
           - text: "Projects"
             href: projects.qmd
+          - text: "Blog"
+            href: blog.qmd
           - text: "Publications"
             href: publications.qmd 
-      - text: "Blog"
-        href: blog.qmd
-      #- text: "CV"
-        #href: docs/resume-cv-Davide-Gentile.pdf
+      - text: "Resume"
+        href: docs/resume-cv-Davide-Gentile.pdf
       #- text: "About"
         #href: about.qmd
 
