--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,6 +17,8 @@ website:
             href: services.qmd
           - text: "Projects"
             href: projects.qmd
+          - text: "Courses"
+            href: courses.qmd
           - text: "Blog"
             href: blog.qmd
           - text: "Publications"
