--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,20 +11,24 @@ website:
         href: index.qmd
       - text: "About"
         href: about.qmd
-      - text: "Sites"
-        menu: 
+      - text: "Projects"
+        href: projects.qmd       
+        
+        
+      #- text: "Sites"
+        #menu: 
           #- text: "Services"
             #href: services.qmd
-          - text: "Projects"
-            href: projects.qmd
-          - text: "Blog"
-            href: blog.qmd
-          - text: "Courses"
-            href: courses.qmd
+          #- text: "Projects"
+            #href: projects.qmd
+          #- text: "Blog"
+            #href: blog.qmd
+          #- text: "Courses"
+            #href: courses.qmd
           #- text: "Academic papers"
             #href: publications.qmd 
       - text: "Resume"
-        href: resume.qmd
+        href: docs/Resume_Davide_Gentile.pdf
       #- text: "About"
         #href: about.qmd
 
