--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,7 +21,7 @@ website:
             #href: services.qmd
           #- text: "Projects"
             #href: projects.qmd
-      - text: "Thinking"
+      - text: "Memos"
         href: blog.qmd
           #- text: "Courses"
             #href: courses.qmd
@@ -51,7 +51,7 @@ website:
 
 format:
   html:
-    theme: sandstone
+    theme: simplex
     linkcolor: "blue"
     css: styles.css
     toc: false
